Fixed skipped header level and started fixing price alignment in the menu

--- a/small_style.css
+++ b/small_style.css
@@ -1,6 +1,5 @@
 
   body {
-    background-color: beige;
     margin: 0px;
     overflow-x: hidden;
   }
@@ -36,7 +35,7 @@
       align-items: center;
       padding: 0px;
       background-color: rgb(239, 235, 218);
-      background: rgba(215, 208, 162, 0.8);
+      background: rgba(47, 116, 18, 0.5);
       color: black;
   }
   
@@ -68,10 +67,10 @@
   
   .section {
       background-color: blanchedalmond;
-      background: rgba(47, 116, 18, 0.5);
+      background: rgba(215, 208, 162, 0.8);
       border-radius: 8px;
       padding: 10px;
-      width: 75%;
+      width: 90%;
       font-size: 3vw;
       margin-bottom: 2vh;
       position: relative;
